--- a/salesforce/OppWonTrigger.cls
+++ b/salesforce/OppWonTrigger.cls
@@ -8,7 +8,20 @@ trigger OppWonTrigger on Opportunity (after update) {
             if (o.StageName == 'Won') {
                 User oppOwner = [SELECT Id, Email, Name FROM User WHERE Id = :o.OwnerId];
                 System.debug('Opp won');
-                httpCallOutCtrl.callDuckYeahForOppWon(oppOwner.Name, oppOwner.Email, o.Name, o.Amount);
+                List<User> supportPeeps = [
+                    SELECT Name from User WHERE Id IN 
+                    (SELECT UserId FROM OpportunityTeamMember 
+                     WHERE OpportunityId = :o.Id) AND Name != :oppOwner.Name
+                ];
+                
+                String supS = '';
+                for (User u: supportPeeps) {
+                    if (String.isnotBlank(u.Name)){
+                    	supS = supS + u.Name + ',';
+                    }
+                }
+                supS = supS.removeEnd(',');
+                httpCallOutCtrl.callDuckYeahForOppWon(oppOwner.Name, oppOwner.Email, o.Name, o.Amount, supS);
             }
         }
 	}
